--- a/.env
+++ b/.env
@@ -29,26 +29,26 @@ VITE_DESC_TEXT_OTHER = ""
 ## 请注意不是 Web端 (JS API)，免费申请，每日上限 5000 次
 ## 此处提供的服务可能会超量从而无法访问，请自行申请！请自行申请！请自行申请！
 ## 若此处设为空则调用 教书先生 API https://api.oioweb.cn/doc/weather/GetWeather
-VITE_WEATHER_KEY = "6c13af6fc30868bee488faf2cc652ab4"
+VITE_WEATHER_KEY = "9227d25cf37641c68d7f37cea0e69d2b"
 
 # 建站日期
 ## 若不需要，请设为空即可
 ## 请按照 YYYY-MM-DD 格式填写或者仅填写年份 YYYY
-VITE_SITE_START = "2023-4-20"
+VITE_SITE_START = "2023-04-20"
 
 # ICP 备案号
 ## 若不需要，请设为空即可
-VITE_SITE_ICP = "萌ICP备20260420"
+VITE_SITE_ICP = "萌ICP备20260420号"
 
 # 歌曲 API 地址
 ## 请参照 https://github.com/xizeyoupan/Meting-API#deno-deploy 进行 API 服务部署
 ## 此处提供的服务可能会超量从而无法访问，请自行部署
 ## 若使用 QQ 音乐歌单，歌曲数量最好不要超出 50 首
 ## 备用：https://api.wuenci.com/meting/api/
-VITE_SONG_API = "https://api-meting.imsyy.top/api"
+VITE_SONG_API = "https://musicapi.matrixcore.top/api"
 # 歌曲服务器 ( netease-网易云, tencent-qq音乐 )
-VITE_SONG_SERVER = "netease"
+VITE_SONG_SERVER = "tencent"
 # 播放类型 ( song-歌曲, playlist-播放列表, album-专辑, search-搜索, artist-艺术家 )
 VITE_SONG_TYPE = "playlist"
 # 播放 ID
-VITE_SONG_ID = "7452421335"
+VITE_SONG_ID = "8556483453"
