--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ VITE_SITE_KEYWORDS = "MatrixCore,个人导航页"
 VITE_SITE_DES = "少年辛苦终身事 莫向光阴惰寸功"
 VITE_SITE_URL = "matrixcore.top"
 VITE_SITE_LOGO = "/images/icon/favicon.ico"
-VITE_SITE_APPLE_LOGO = "/images/logo/apple-touch-icon.png"
+VITE_SITE_APPLE_LOGO = "/images/icon/favicon.ico"
 
 # 百度统计
 ## 若不需要，请设为空即可
