--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@ VITE_SITE_BAIDUTONGJI = ""
 VITE_DESC_HELLO = "Hello World !"
 VITE_DESC_TEXT = "站在巨人的肩膀上"
 VITE_DESC_HELLO_OTHER = "Oops !"
-VITE_DESC_TEXT_OTHER = ""
+VITE_DESC_TEXT_OTHER = "少年辛苦终身事 莫向光阴惰寸功"
 
 # 社交链接
 ## 请在 src/assets/socialLinks.json 文件中配置
