--- a/.env
+++ b/.env
@@ -29,7 +29,7 @@ VITE_DESC_TEXT_OTHER = "少年辛苦终身事 莫向光阴惰寸功"
 ## 请注意不是 Web端 (JS API)，免费申请，每日上限 5000 次
 ## 此处提供的服务可能会超量从而无法访问，请自行申请！请自行申请！请自行申请！
 ## 若此处设为空则调用 教书先生 API https://api.oioweb.cn/doc/weather/GetWeather
-VITE_WEATHER_KEY = "9227d25cf37641c68d7f37cea0e69d2b"
+VITE_WEATHER_KEY = ""
 
 # 建站日期
 ## 若不需要，请设为空即可
